--- a/bibliography.bib
+++ b/bibliography.bib
@@ -29,7 +29,8 @@
   publisher = {European Language Resources Association (ELRA)},
   pages     = {3040--3046},
   url       = {http://www.lrec-conf.org/proceedings/lrec2008/pdf/773_paper.pdf}
-}@InProceedings{eisele-EtAl:2008:WMT,
+}
+@InProceedings{eisele-EtAl:2008:WMT,
   author    = {Eisele, Andreas and Federmann, Christian and Saint-Amand, Herv\'{e} and Jellinghaus, Michael and Herrmann, Teresa and Chen, Yu},
   title     = {Using Moses to Integrate Multiple Rule-Based Machine Translation Engines into a Hybrid System},
   booktitle = {Proceedings of the Third Workshop on Statistical Machine Translation},
@@ -61,7 +62,8 @@
   publisher = {Springer, Heidelberg},
   pages     = {127--134},
   url       = {http://dx.doi.org/10.1007/978-3-540-85845-4_16}
-}@InProceedings{eisele-EtAl:2008:TATC,
+}
+@InProceedings{eisele-EtAl:2008:TATC,
   author    = {Eisele, Andreas and Federmann, Christian and Uszkoreit, Hans and Saint-Amand, Herv\'{e} and Kay, Martin and Jellinghaus, Michael and Hunsicker, Sabine and Herrmann, Teresa and Chen, Yu},
   title     = {Hybrid Architectures for Multi-Engine Machine Translation},
   booktitle = {Proceedings of Translating and the Computer 30 (TATC-30)},
