--- a/bibliography.bib
+++ b/bibliography.bib
@@ -361,8 +361,7 @@
   pages     = {37--48},
   address   = {Saarbr\"ucken, Germany},
   publisher = {Springer, Heidelberg},
-  url       = {},
-  note      = {Not available}
+  url       = {http://dx.doi.org/10.1007/978-3-642-33347-7_4},
 }
 @InProceedings{federmann:2012:AMTA,
   author    = {Federmann, Christian},
