--- a/bibliography.bib
+++ b/bibliography.bib
@@ -372,8 +372,7 @@
   pages     = {113--118},
   address   = {San Diego, USA},
   publisher = {Association for Machine Translation in the Americas (AMTA)},
-  url       = {},
-  note      = {Accepted for publication}
+  url       = {http://amta2012.amtaweb.org/AMTA2012Files/papers/126.pdf},
 }
 @InProceedings{arcan-EtAl:2012:COLING,
   author    = {Arcan, Mihael and Federmann, Christian and Buitelaar, Paul},
