--- a/bibtex/034_federmann_2012.bib
+++ b/bibtex/034_federmann_2012.bib
@@ -7,6 +7,5 @@
   pages     = {113--118},
   address   = {San Diego, USA},
   publisher = {Association for Machine Translation in the Americas (AMTA)},
-  url       = {},
-  note      = {Accepted for publication}
+  url       = {http://amta2012.amtaweb.org/AMTA2012Files/papers/126.pdf},
 }
