--- a/bibtex/021_federmann-et-al_2011.bib
+++ b/bibtex/021_federmann-et-al_2011.bib
@@ -1,7 +1,7 @@
 @InProceedings{federmann-EtAl:2011:ML4HMT,
   author    = {Federmann, Christian and Chen, Yu and Hunsicker, Sabine and Wang, Rui},
   title     = {DFKI System Combination using Syntactic Information at ML4HMT-2011},
-  booktitle = {Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4. Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11)},
+  booktitle = {Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11)},
   month     = {November},
   year      = {2011},
   address   = {Barcelona, Spain},
