--- a/bibliography.bib
+++ b/bibliography.bib
@@ -219,7 +219,7 @@
 @InProceedings{federmann-EtAl:2011:ML4HMT,
   author    = {Federmann, Christian and Chen, Yu and Hunsicker, Sabine and Wang, Rui},
   title     = {DFKI System Combination using Syntactic Information at ML4HMT-2011},
-  booktitle = {Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4. Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11)},
+  booktitle = {Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11)},
   month     = {November},
   year      = {2011},
   address   = {Barcelona, Spain},
@@ -230,7 +230,7 @@
 @InProceedings{federmann:2011:ML4HMT,
   author    = {Federmann, Christian},
   title     = {Results from the ML4HMT Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation},
-  booktitle = {Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4. Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11)},
+  booktitle = {Proceedings of the International Workshop on Using Linguistic Information for Hybrid Machine Translation (LIHMT 2011) and of the Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-11)},
   month     = {November},
   year      = {2011},
   address   = {Barcelona, Spain},
@@ -385,4 +385,28 @@
   pages     = {},
   url       = {},
   note      = {Accepted for publication}
+}
+@InProceedings{federmann:2012:ML4HMT,
+  author    = {Federmann, Christian},
+  title     = {System Combination Using Joint, Binarised Feature Vectors},
+  booktitle = {Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12)},
+  month     = {December},
+  year      = {2012},
+  address   = {Mumbai, India},
+  publisher = {},
+  pages     = {},
+  url       = {},
+  note      = {Accepted for publication},
+}
+@InProceedings{federmann:2012:ML4HMT-Results,
+  author    = {Federmann, Christian},
+  title     = {Results from the ML4HMT-12 Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation},
+  booktitle = {Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12)},
+  month     = {December},
+  year      = {2012},
+  address   = {Mumbai, India},
+  publisher = {},
+  pages     = {},
+  url       = {},
+  note      = {Accepted for publication},
 }
