Updated authors for ML4HMT-12 results overview paper.

--- a/bibtex/037_federmann_2012.bib
+++ b/bibtex/037_federmann_2012.bib
@@ -1,5 +1,5 @@
 @InProceedings{federmann:2012:ML4HMT-Results,
-  author    = {Federmann, Christian},
+  author    = {Federmann, Christian and Okita, Tsuyoshi and Melero, Maite and Costa-Juss\`{a}, Marta R. and Badia, Toni and van Genabith, Josef},
   title     = {Results from the ML4HMT-12 Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation},
   booktitle = {Proceedings of the Second Shared Task on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid Machine Translation (ML4HMT-12)},
   month     = {December},
