Fixed wrong article title.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -240,7 +240,7 @@
 }
 @Article{federmann-EtAl:2011:PBML,
   author    = {Federmann, Christian and Melero, Maite and Pecina, Pavel and van Genabith, Josef},
-  title     = {MT Server Land: An Open-Source MT Architecture},
+  title     = {Towards Optimal Choice Selection for Improved Hybrid Machine Translation},
   booktitle = {Prague Bulletin of Mathematical Linguistics},
   month     = {April},
   year      = {2012},
