Finalised BibTex for ML4HMT-12 publications.

--- a/bibtex/036_federmann_2012.bib
+++ b/bibtex/036_federmann_2012.bib
@@ -5,8 +5,7 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {},
-  pages     = {},
-  url       = {},
-  note      = {Accepted for publication},
+  publisher = {COLING 2012},
+  pages     = {77--84},
+  url       = {http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann.pdf},
 }
