--- a/bibliography.bib
+++ b/bibliography.bib
@@ -393,10 +393,9 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {},
-  pages     = {},
-  url       = {},
-  note      = {Accepted for publication},
+  publisher = {COLING 2012},
+  pages     = {77--84},
+  url       = {http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann.pdf},
 }
 @InProceedings{federmann:2012:ML4HMT-Results,
   author    = {Federmann, Christian and Okita, Tsuyoshi and Melero, Maite and Costa-Juss\`{a}, Marta R. and Badia, Toni and van Genabith, Josef},
@@ -405,8 +404,7 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {},
-  pages     = {},
-  url       = {},
-  note      = {Accepted for publication},
+  publisher = {COLING 2012},
+  pages     = {85--90},
+  url       = {http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann-et-al.pdf},
 }
