Updated BibTex entries for all COLING-12 papers.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -381,10 +381,9 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {},
-  pages     = {},
-  url       = {},
-  note      = {Accepted for publication}
+  publisher = {The COLING 2012 Organizing Committee},
+  pages     = {67--82},
+  url       = {http://www.aclweb.org/anthology/C12-1005.pdf},
 }
 @InProceedings{federmann:2012:ML4HMT,
   author    = {Federmann, Christian},
@@ -393,9 +392,9 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {COLING 2012},
+  publisher = {The COLING 2012 Organizing Committee},
   pages     = {77--84},
-  url       = {http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann.pdf},
+  url       = {http://www.aclweb.org/anthology/W12-5708.pdf},
 }
 @InProceedings{federmann:2012:ML4HMT-Results,
   author    = {Federmann, Christian and Okita, Tsuyoshi and Melero, Maite and Costa-Juss\`{a}, Marta R. and Badia, Toni and van Genabith, Josef},
@@ -404,7 +403,7 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {COLING 2012},
+  publisher = {The COLING 2012 Organizing Committee},
   pages     = {85--90},
-  url       = {http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann-et-al.pdf},
+  url       = {http://www.aclweb.org/anthology/W12-5709.pdf},
 }
