--- a/bibtex/035_arcan-et-al_2012.bib
+++ b/bibtex/035_arcan-et-al_2012.bib
@@ -5,8 +5,7 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {},
-  pages     = {},
-  url       = {},
-  note      = {Accepted for publication}
+  publisher = {The COLING 2012 Organizing Committee},
+  pages     = {67--82},
+  url       = {http://www.aclweb.org/anthology/C12-1005.pdf},
 }
