--- a/bibtex/037_federmann_2012.bib
+++ b/bibtex/037_federmann_2012.bib
@@ -5,7 +5,7 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {COLING 2012},
+  publisher = {The COLING 2012 Organizing Committee},
   pages     = {85--90},
-  url       = {http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann-et-al.pdf},
+  url       = {http://www.aclweb.org/anthology/W12-5709.pdf},
 }
