--- a/bibtex/036_federmann_2012.bib
+++ b/bibtex/036_federmann_2012.bib
@@ -5,7 +5,7 @@
   month     = {December},
   year      = {2012},
   address   = {Mumbai, India},
-  publisher = {COLING 2012},
+  publisher = {The COLING 2012 Organizing Committee},
   pages     = {77--84},
-  url       = {http://www.dfki.de/~cfedermann/ML4HMT/ML4HMT-2012-federmann.pdf},
+  url       = {http://www.aclweb.org/anthology/W12-5708.pdf},
 }
