--- a/bibliography.bib
+++ b/bibliography.bib
@@ -407,3 +407,13 @@
   pages     = {85--90},
   url       = {http://www.aclweb.org/anthology/W12-5709.pdf},
 }
+@Book{ML4HMT:2012,
+  editor    = {van Genabith, Josef  and  Badia, Toni  and  Federmann, Christian  and  Melero, Maite  and  Costa-juss{\`a}, Marta R.  and  Okita, Tsuyoshi},
+  title     = {Proceedings of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT},
+  month     = {December},
+  year      = {2012},
+  address   = {Mumbai, India},
+  publisher = {The COLING 2012 Organizing Committee},
+  url       = {http://www.aclweb.org/anthology/W12-57.pdf},
+}
+
