--- a/bibliography.bib
+++ b/bibliography.bib
@@ -408,7 +408,7 @@
   url       = {http://www.aclweb.org/anthology/W12-5709.pdf},
 }
 @Book{ML4HMT:2012,
-  editor    = {van Genabith, Josef  and  Badia, Toni  and  Federmann, Christian  and  Melero, Maite  and  Costa-juss{\`a}, Marta R.  and  Okita, Tsuyoshi},
+  editor    = {van Genabith, Josef  and  Badia, Toni  and  Federmann, Christian  and  Melero, Maite  and  Costa-juss\`{a}, Marta R.  and  Okita, Tsuyoshi},
   title     = {Proceedings of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT},
   month     = {December},
   year      = {2012},
