--- a/bibtex/038_van_genabith-et-al_2012.bib
+++ b/bibtex/038_van_genabith-et-al_2012.bib
@@ -1,5 +1,5 @@
 @Book{ML4HMT:2012,
-  editor    = {van Genabith, Josef  and  Badia, Toni  and  Federmann, Christian  and  Melero, Maite  and  Costa-juss{\`a}, Marta R.  and  Okita, Tsuyoshi},
+  editor    = {van Genabith, Josef  and  Badia, Toni  and  Federmann, Christian  and  Melero, Maite  and  Costa-juss\`{a}, Marta R.  and  Okita, Tsuyoshi},
   title     = {Proceedings of the Second Workshop on Applying Machine Learning Techniques to Optimise the Division of Labour in Hybrid MT},
   month     = {December},
   year      = {2012},
