Fixed small problems with BibTex files.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -208,7 +208,7 @@
 }
 @InProceedings{burchardt-EtAl:2011:GSCL,
   author    = {Burchardt, Aljoscha and Federmann, Christian and Uszkoreit, Hans},
-  title     = {MT Server Land Translation Services},
+  title     = {Hybrid Machine Translation for German in taraX\"{U}: Can translation costs be decreased without degrading quality?},
   booktitle = {Hamburg Working Paper in Multilingualism. Conference of the German Society for Computational Linguistics and Language Technology (GSCL-11)},
   month     = {September},
   year      = {2011},
@@ -273,7 +273,7 @@
   pages     = {2189--2193},
   url       = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/444_Paper.pdf}
 }
-	@InProceedings{avramidis-EtAl:2012b:LREC,
+@InProceedings{avramidis-EtAl:2012b:LREC,
   author    = {Avramidis, Eleftherios and Burchardt, Aljoscha and Federmann, Christian and Popovi\'{c}, Maja and Tscherwinka, Cindy and Vilar, David},
   title     = {Involving Language Professionals in the Evaluation of Machine Translation},
   booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
