--- a/bibtex/020_burchardt-et-al_2011.bib
+++ b/bibtex/020_burchardt-et-al_2011.bib
@@ -1,6 +1,6 @@
 @InProceedings{burchardt-EtAl:2011:GSCL,
   author    = {Burchardt, Aljoscha and Federmann, Christian and Uszkoreit, Hans},
-  title     = {MT Server Land Translation Services},
+  title     = {Hybrid Machine Translation for German in taraX\"{U}: Can translation costs be decreased without degrading quality?},
   booktitle = {Hamburg Working Paper in Multilingualism. Conference of the German Society for Computational Linguistics and Language Technology (GSCL-11)},
   month     = {September},
   year      = {2011},
