Added AAAI LML 2013 publication.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -417,3 +417,13 @@
   url       = {http://www.aclweb.org/anthology/W12-57.pdf},
 }
 
+@InProceedings{federmann:2013:AAI-LML,
+  author    = {Federmann, Christian},
+  title     = {A Feedback-enabled Machine Learning Approach for Multi-Engine Machine Translation},
+  booktitle = {Proceedings of the AAAI 2013 Spring Symposium on Lifelong Machine Learning},
+  month     = {March},
+  year      = {2013},
+  address   = {Stanford, CA, USA},
+  publisher = {AAAI Press},
+  note      = {Accepted for publication},
+}
