--- a/bibliography.bib
+++ b/bibliography.bib
@@ -426,3 +426,14 @@
   address   = {Stanford, CA, USA},
   publisher = {AAAI Press},
 }
+@InProceedings{bojar-EtAl:2013:WMT,
+  author    = {Bojar, Ond\v{r}ej  and  Buck, Christian  and  Callison-Burch, Chris  and  Federmann, Christian  and  Haddow, Barry  and  Koehn, Philipp  and  Monz, Christof  and  Post, Matt  and  Soricut, Radu  and  Specia, Lucia},
+  title     = {Findings of the 2013 Workshop on Statistical Machine Translation},
+  booktitle = {Proceedings of the Eighth Workshop on Statistical Machine Translation},
+  month     = {August},
+  year      = {2013},
+  address   = {Sofia, Bulgaria},
+  publisher = {Association for Computational Linguistics},
+  url       = {http://www.statmt.org/wmt13/},
+  note      = {To appear},
+}
